--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de ejemplo con audio</title>
+  <title>Explicación de Protocolos</title>
+  <!-- Agrega Bootstrap CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <h1>¿Qué es un protocolo?</h1>
-  <p>Escucha el siguiente audio:</p>
-  <audio controls>
-    <source src="audio/protocolo.mp3" type="audio/mpeg">
-    Tu navegador no soporta la etiqueta de audio.
-  </audio>
+  <div class="container">
+    <h1 class="my-4">¿Qué es un protocolo?</h1>
+    <p>Un protocolo, en términos simples, es un conjunto de reglas y pautas que ayudan a las personas, dispositivos o sistemas a comunicarse entre sí de manera efectiva. Piensa en un protocolo como las reglas de un juego o las normas de cortesía en una conversación. Al seguir estas reglas, las partes involucradas pueden entenderse y trabajar juntas de manera más fluida.</p>
+
+    <p>En el caso de las redes de informática, los protocolos aseguran que los dispositivos electrónicos, como computadoras, teléfonos móviles y otros, puedan intercambiar información de manera clara y organizada. Estas reglas establecen cómo se deben enviar, recibir y procesar los datos en una red, permitiendo que la comunicación fluya sin problemas.</p>
+
+    <p>Para ilustrar un ejemplo de la vida cotidiana, imagina que dos personas hablan diferentes idiomas y desean comunicarse. Si ambas conocen un tercer idioma en común, pueden utilizarlo como un "protocolo" para entenderse mutuamente. De manera similar, en el mundo de las redes de informática, los protocolos actúan como ese "idioma común" que permite a los dispositivos comunicarse de manera efectiva.</p>
+  </div>
+
+  <!-- Agrega Bootstrap y dependencias de JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
