--- a/elementos.html
+++ b/elementos.html
@@ -34,7 +34,19 @@
                 </ul>    
             </li>
         </ul>
-    </div>
+       <ul> 
+<li>Entidad: se refiere a cualquier objeto o elemento dentro de la red que tenga una identidad única y pueda comunicarse con otros elementos.</li>
+
+<li>Host: son dispositivos finales que generan, consumen o procesan datos en la red, como computadoras de escritorio, portátiles, servidores, teléfonos móviles, impresoras y otros dispositivos..</li>
+<li>Nodo: se refiere a cualquier dispositivo dentro de la red que tenga capacidad de procesamiento, almacenamiento y comunicación, incluyendo tanto dispositivos finales como dispositivos de interconexión de red.
+.</li>
+<li>Interfaz: son componentes de hardware, como las tarjetas de interfaz de red (NIC), que permiten la comunicación entre dispositivos mediante cableado o conexiones inalámbricas.
+</li>
+<li>Protocolo: son reglas y estándares que definen cómo se comunican los dispositivos en la red y cómo se transmiten y procesan los datos. Ejemplos de protocolos son TCP/IP, Ethernet y Wi-Fi.
+</li>
+<li>Medio: son los medios de transmisión utilizados para la comunicación entre dispositivos, como el cableado (cobre, fibra óptica) y las conexiones inalámbricas (Wi-Fi, Bluetooth, tecnologías celulares).
+  </li>      </ul>
+           </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
