--- a/elementos.html
+++ b/elementos.html
@@ -46,6 +46,9 @@
 </li>
 <li>Medio: son los medios de transmisión utilizados para la comunicación entre dispositivos, como el cableado (cobre, fibra óptica) y las conexiones inalámbricas (Wi-Fi, Bluetooth, tecnologías celulares).
   </li>      </ul>
+        
+        <h3>Internet - Modelo OSI - Modelo TCP/IP</h3>
+        <img src="https://www.guru99.com/images/1/093019_0615_TCPIPModelW3.png">
            </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
