--- a/elementos.html
+++ b/elementos.html
@@ -48,9 +48,12 @@
   </li>      </ul>
         
         <h3>Internet - Modelo OSI - Modelo TCP/IP</h3>
-        <img src="https://www.guru99.com/images/1/093019_0615_TCPIPModelW3.png">
+        <img src="https://interpolados.files.wordpress.com/2017/03/110.png">
            </div>
-
+      <h3>Protocolos del Modelo TCP/IP</h3>
+        <img src="https://upload.wikimedia.org/wikipedia/en/a/a6/Internet_layering.svgg">
+           </div>
+https://upload.wikimedia.org/wikipedia/en/a/a6/Internet_layering.svg
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
