--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
 <div  class="parrafo">
         <p>Antes de continuar, se necesitan algunas definiciones:</p>
         <ul>
-            <li>Entidad: Alguna "cosa" que hace algo. Dependiendo del contexto, una entidad puede ser una computadora, una persona, un programa, un dispositivo o un proceso. O, tal vez, algo más. "Entidad" puede referirse a algo que está a punto de ser presentado.</li>
+            <li>Entidad: Es un término amplio y genérico que puede referirse a cualquier objeto, elemento o sujeto que participa en un sistema o red. En el ámbito de las redes informáticas, las entidades pueden incluir dispositivos como computadoras, teléfonos móviles, procesos de software en ejecución, usuarios que interactúan con dispositivos, e incluso organizaciones enteras. El término "entidad" no se limita a elementos específicos de la red y puede referirse a una variedad de objetos, tanto dentro como fuera de la red.</li>
             <audio controls>
                 <source src="audio/entidad.mp3" type="audio/mpeg">
                 Tu navegador no soporta el elemento de audio.
             </audio>
             <!-- Continúa agregando los elementos de la lista y los elementos de audio correspondientes -->
            
-                <li>Host: Una entidad que envía o recibe datos. Un host puede ser cualquier cosa, desde una PC de escritorio hasta un dispositivo móvil o una impresora. En general, un host es cualquier cosa que pueda conectarse a una red y comunicarse con otros hosts.</li>
+                <li>Host: Un host es un tipo particular de nodo que envía o recibe datos en una red. En esencia, un host es un dispositivo que se conecta a una red para comunicarse con otros dispositivos en la red. Por ejemplo, computadoras de escritorio, dispositivos móviles, servidores, impresoras y otros dispositivos similares pueden considerarse hosts. Mientras que todos los hosts son nodos, no todos los nodos son hosts, ya que algunos nodos, como los enrutadores, actúan como dispositivos intermediarios en la red y no envían ni reciben datos directamente como hosts.</li>
                 <audio controls>
                     <source src="audio/host.mp3" type="audio/mpeg">
                     Tu navegador no soporta el elemento de audio.
                 </audio>
-                <li>Nodo: Un punto de conexión en una red. Un nodo puede ser cualquier cosa, desde una PC de escritorio hasta un servidor o un dispositivo de red. Un nodo es esencialmente cualquier cosa que pueda conectarse a una red y que tenga una dirección IP única.</li>
+                <li>Nodo: Un nodo es un dispositivo o punto de conexión en una red. Los nodos pueden ser dispositivos finales, como computadoras, servidores y dispositivos móviles, o dispositivos de red intermedios, como enrutadores y conmutadores. En el contexto de una red informática, los nodos se identifican mediante direcciones IP únicas. A diferencia del término "entidad", que puede referirse a una amplia variedad de objetos, el término "nodo" se refiere específicamente a elementos que forman parte de la infraestructura de una red y que tienen una dirección IP.</li>
                 <audio controls>
                     <source src="audio/nodo.mp3" type="audio/mpeg">
                     Tu navegador no soporta el elemento de audio.
