--- a/elementos.html
+++ b/elementos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Elementos de una Red Inform</title>
+    <title>Elementos de una Red Informática</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <style>
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Elementos de una Red</h2>
+        <h2>Elementos de una Red Informática</h2>
      
         <ul class="list-group">
             <li class="list-group-item"><strong>Dispositivos finales (hosts):</strong> Computadoras de escritorio, portátiles, servidores, teléfonos móviles, impresoras y otros dispositivos que generan, consumen o procesan datos en la red.</li>
